THIS IS THE LAST EVER RELEASE

I got annoyed using symx so I decided to fix it

* Removed NuCore.Utilities and merged the parts of ite actually used into the main application
* Updated from .NET 6.0 to .NET 9.0
* Logging::Init now called before parsing configuration
* Updated copyright from 2022 to 2022-2024
* Removed SymX-UI
* Removed never finished pdb file mode

4.0.0 Alpha 5.0x (May 22, 2023) - UNSUPPORTED RELEASE:
* Overwrite CSV files.
* Support CSV files with dates after December 31, 9999.

4.0.0 Alpha 4.1 (September 6, 2022):
* Fixed literally everything being broken unless you put a dummy arg at the start
* Fixed help text for 000admin
* Fixed symx -mode <mode name> with nothing else redirecting you to general help (symx -help obviously still works)
* Fixed shorthand for -inipath

4.0.0 Alpha 4 (September 6, 2022):
* Fixed bug where some error messages would act as if no error occurred.
* Added error condition for passing a non-CSV file into CSV Import mode.
* Removed remaining MassView string.
* Rewrote command-line handling.
* Changed command-line syntax - CHECK HELP FOR THE NEW SYNTAX
* File metadata now prints the filename so that you know what file each piece of metadata is for
* Fixed bug where SymX always claimed another instance was running
* Refactored HTTP client handling
* SymX now tells you when it is clearing log files
* Fixed INI file loading with non-default INI paths

NEW FUNCTIONALITY:
For real symbol servers (not MSDL), SymX will now parse the /000Admin folder if you use -mode Parse000Admin. 
This will download all of the symstore in most cases. However, there are some cases (such as nvidia's server) where it wipes history.txt every time they push a new version, so it will only grab the latest version.

KNOWN ISSUE:
Cosmetic: "Logger not initialised" may be printed at start

Very sorry for the delay. Been busy with other stuff.

4.0.0 Alpha 3 (July 19, 2022):