@@ -14,6 +14,7 @@
 	<Configurations>Debug;Release</Configurations>
 	<NoWarn>1701;1702</NoWarn>
 	<PlatformTarget>x64</PlatformTarget>
+	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
