@@ -10,6 +10,8 @@ I got annoyed using symx so I decided to fix it
 * Updated copyright from 2022 to 2022-2024
 * Removed SymX-UI
 * Removed never finished pdb file mode
+* All builds can use an unlimited thread count
+* Fixed the stupid ordering required by the command line parsing
 
 4.0.0 Alpha 5.0x (May 22, 2023) - UNSUPPORTED RELEASE:
 * Overwrite CSV files.
